--- a/src/components/pages/HomePage/HomePage.module.css
+++ b/src/components/pages/HomePage/HomePage.module.css
@@ -16,6 +16,20 @@
     list-style: none;
     margin: 15px 0;
     padding: 0;
+    width: 500px;
+}
+.item{
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    background: linear-gradient(to right, #232526, #414345);
+    border-radius: 5px;
+}
+
+.item:last-child{
+    margin-bottom: 50px;
 }
 
 
@@ -32,10 +46,10 @@
     fill: rgb(241, 85, 85);
     color: rgb(241, 85, 85);
 }
+
 .itemLink:hover .moviesImage{
-    top: 50%;
-    right: 20%;
-    transform: translate(20%, -50%);
+    right: 500px;
+    top: 125px;
 }
 
     
@@ -46,32 +60,23 @@
 .icon{
     width: 30px;
     height: 30px;
-    fill: black;
+    fill: white;
     transition: fill 0.3s ease-in-out;
+    margin-left: 10px;
 }
 
 .title{
-    font-size: 20px;
-    font-weight: bold;
     margin: 0 10px 0 0;
-    color: black;
-    transition: color 0.3s ease-in-out;
-}
-
-.text{
-    font-size: 20px;
-    color: #666;
-    margin: 0;
+    color: white;
     transition: color 0.3s ease-in-out;
 }
 
 .moviesImage{
     position: fixed;
-    top: 50%;
-    right: -40%;
     width: auto;
-    border-radius: 5px;
+    border-radius: 25px;
     transition: all 1s;
     overflow: hidden;
-  
+    right: -500px;
+    top: 125px;
 }
