--- a/src/components/pages/CastPage/Cast.module.css
+++ b/src/components/pages/CastPage/Cast.module.css
@@ -1,15 +1,24 @@
 .container{
-    padding-top: 20px;
-    
+    padding-top: 20px;   
 }
 
 .list{
     list-style: none;
     display: flex;
-    justify-content:flex-start;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     padding: 0;
+    border: 1px dashed rgb(252, 1, 1);
+    border-radius: 4px;
+    background-color: #ffffff;
+    padding: 10px 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.list:hover{
+    border: 1px solid rgb(252, 1, 1);
+    box-shadow: 0px 0px 10px rgb(252, 1, 1);
 }
 
 .item{
