--- a/src/components/pages/MovieDetails/MovieDetails.module.css
+++ b/src/components/pages/MovieDetails/MovieDetails.module.css
@@ -1,82 +1,102 @@
 .container{
+    margin: 0 auto;
     padding: 50px 20px;
     max-width: 1140px;
 
 }
-.containerImage{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-right: 100px;
-}
 .containerItems{
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
-
+    align-items: stretch;
+    margin-bottom: 20px;
 }
-
-
+.images{
+    margin-right: 50px;
+    border: 1px dashed rgb(252, 1, 1);
+    border-radius: 4px;
+    padding: 5px;
+    background-color: #ffffff;
+    transition: all 0.3s ease-in-out;
+    display: flex;
+}
 .images img{
-    min-width:100%;
-    max-height: 600px;
-    object-fit: cover;
-    border-radius: 5px;
+    max-width: 100%;
+    max-height: 100%;
+   
 }
-
+.images:hover{
+    border: 1px solid rgb(252, 1, 1);
+    box-shadow: 0px 0px 10px rgb(252, 1, 1);
+}
 .info{
-    margin-top: 58px;
-    color: #000;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px;
+    border: 1px dashed rgb(252, 1, 1);
+    border-radius: 4px;
+    background-color: #ffffff;
+    transition: all 0.3s ease-in-out;
 }
-
+.info:hover{
+    border: 1px solid rgb(252, 1, 1);
+    box-shadow: 0px 0px 10px rgb(252, 1, 1);
+}
 .title{
-    font-size: 32px;
+    font-size: 30px;
     font-weight: bold;
-    margin: 0 0 25px 0;
-
+    margin: 0 0 20px 0;
 }
-
 .text{
-    font-size: 16px;
-    font-weight: 400;
-    margin: 0 0 15px 0;
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: justify;
+    margin: 0 0 20px 0;
 }
 .genres{
+    font-size: 18px;
+    line-height: 1.5;
+    margin: 0 0 20px 0;
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
     padding: 0;
     margin: 0;
-    list-style: none;
 }
 
 .genresItem{
-    display: inline-block;
-    margin-right: 10px;
-    padding: 5px 10px;
+    padding: 10px 25px;
+    border: 1px solid rgb(8, 8, 8);
     border-radius: 5px;
-    background-color: #f5f5f5;
-    color: #000;
-    font-size: 14px;
-    font-weight: 700;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border: 1px solid #ee0a0a;
-    box-shadow: 0 0 10px #ee0a0a;
-}
-.genresItem:hover{
-    background-color: #000;
-    color: #fff;
+    cursor: default;
+    background: linear-gradient(to right, #333333, #dd1818);
+    color: white;
+    transition: background 0.3s;
+    margin-right: 15px;
 }
 .genresItem:last-child{
     margin-right: 0;
 }
+.titleGenres{
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1.5;
+}
 .genresText{
-    margin: 0 ;
+    font-size: 18px;
+    line-height: 1.5;
+    margin: 0;
+    
 }
-
+.genresItem:hover{
+    background: linear-gradient(to left, #333333, #dd1818);
+    color: white;
+}
 .navLink{
-    margin-top: 25px;
+    text-align: center;
+    
 }
-
 .link {
     padding: 10px 20px;
     border: none;
