--- a/src/components/modules/Menu/Menu.module.css
+++ b/src/components/modules/Menu/Menu.module.css
@@ -14,7 +14,7 @@
 
 .link{
     color: #fff;
-    font-size: larger;
+    font-size: 40px;
     text-decoration: none;
     transition: color 0.3s ease-in-out;
     margin-left: 50px;
